fix: remove blue tap highlight on mobile for bullshit button only

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
 }
 
 .bullshit-button {
+  -webkit-tap-highlight-color: transparent;
   background: red;
   color: white;
   font-size: 3rem;
